test/goldens/ghc/9.10/getqq_missing_key.golden
test/wont-compile/GetMissingKey.hs:17:15: error: [GHC-64725]
    • Key 'missing' does not exist in the following schema:
      '[ '(Data.Aeson.Schema.Key.NormalKey "foo",
           Data.Aeson.Schema.Type.SchemaScalar Bool)]
    • In the second argument of ‘(.)’, namely
        ‘Data.Aeson.Schema.Internal.getKey
           (GHC.Internal.Data.Proxy.Proxy ::
              GHC.Internal.Data.Proxy.Proxy "missing")’
      In the expression:
        (id
           . Data.Aeson.Schema.Internal.getKey
               (GHC.Internal.Data.Proxy.Proxy ::
                  GHC.Internal.Data.Proxy.Proxy "missing"))
          o
      In an equation for ‘result’:
          result
            = ((id
                  . Data.Aeson.Schema.Internal.getKey
                      (GHC.Internal.Data.Proxy.Proxy ::
                         GHC.Internal.Data.Proxy.Proxy "missing"))
                 o)
   |
17 | result = [get| o.missing |]
   |               ^^^^^^^^^^^^^

test/wont-compile/GetMissingKey.hs:17:15: error: [GHC-64725]
    • Key 'missing' does not exist in the following schema:
      '[ '(Data.Aeson.Schema.Key.NormalKey "foo",
           Data.Aeson.Schema.Type.SchemaScalar Bool)]
    • In the second argument of ‘(.)’, namely
        ‘Data.Aeson.Schema.Internal.getKey
           (GHC.Internal.Data.Proxy.Proxy ::
              GHC.Internal.Data.Proxy.Proxy "missing")’
      In the expression:
        (id
           . Data.Aeson.Schema.Internal.getKey
               (GHC.Internal.Data.Proxy.Proxy ::
                  GHC.Internal.Data.Proxy.Proxy "missing"))
          o
      In an equation for ‘result’:
          result
            = ((id
                  . Data.Aeson.Schema.Internal.getKey
                      (GHC.Internal.Data.Proxy.Proxy ::
                         GHC.Internal.Data.Proxy.Proxy "missing"))
                 o)
   |
17 | result = [get| o.missing |]
   |               ^^^^^^^^^^^^^

